[tool.poetry]
name = "bluestorm-api"
version = "0.1.0"
description = ""
authors = ["ffmatheus <matheusbfrfg@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
